# dtw-pattern

./: .gitignore  CMakeLists.txt  DTW.cpp  DTW.h  Makefile  README.md  main.cpp  trillion-half.sbatch  trillion-p.sbatch
data/: advertising-and-sales-data-36-co.csv  google_trace_cpu.csv  internet.csv  small-d.csv  small.csv  trillion-processed.csv
src/: DTW.cpp  DTW.h  Matrix.cpp  Matrix.h  MatrixCuda.cpp  MatrixCuda.cu  MatrixCuda.h  MatrixCudaOp.cu  MatrixCudaOp.h  MatrixCudaOpS.cu  MatrixCudaOpS.h  MatrixKernel.cu  MatrixKernel.h  MatrixKernels.cu  MatrixKernels.h  Util.cpp  Util.h  main.cpp
